# RRTL

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
bench/extsim/: dut.v  dut_pyrtl.py  run.sh  sim_main.cpp
bench/sv/: aimac.v  aimac_main.cpp  cfgdsp.sv  check_opencl.c  cpu.sv  crc32.sv  crc32_gates.json  mixed.sv  mixed_coupled.sv  picorv32_prog.hex  picorv32_soc.v  picorv32_tb.cpp  run_picorv32.sh  synth_crc32.ys  synth_picorv32.ys  workload.sv
crates/rrtl-core/: Cargo.toml
crates/rrtl-gpu-sim/: Cargo.toml
crates/rrtl-gpu-sim/examples/: activity_probe.rs  aoi22_check.rs  aoi_check.rs  batch_bench.rs  fused_macro_check.rs  fused_ops_check.rs  fused_superop_probe.rs  gate_check.rs  gpu_dispatch_cost.rs  gpu_feature_check.rs  gpu_interp_check.rs  gpu_mem_check.rs  gpu_multilimb_check.rs  gpu_throughput.rs  gpu_uniform_skip_probe.rs  gpu_vs_simd.rs  instance_check.rs  instance_fold_check.rs  lane_split_check.rs  picorv32_gpu.rs  pipeline_check.rs  slotalloc_check.rs  specialize_check.rs  strength_check.rs  sv_coverage_probe.rs  sv_gpu_bringup.rs  wgsl_size.rs  work_steal_check.rs
crates/rrtl-gpu-sim/src/: instance_fold.rs  interp.rs  lane_split.rs  lib.rs  work_steal.rs
crates/rrtl-gpu-sim/tests/: sv_bringup.rs
crates/rrtl-ir/: Cargo.toml
crates/rrtl-macros/: Cargo.toml
crates/rrtl-pyrtl/: Cargo.toml
crates/rrtl-pyrtl/src/: lib.rs  main.rs
crates/rrtl-pyrtl/tests/: import.rs
crates/rrtl-riscv-asm/: Cargo.toml
crates/rrtl-runtime/: Cargo.toml
crates/rrtl-runtime/examples/: sv_gpu_quickstart.rs
crates/rrtl-runtime/src/: lib.rs  sv_gpu.rs
crates/rrtl-runtime/tests/: worker_process.rs
crates/rrtl-sim-ir/: Cargo.toml
crates/rrtl-sim-ir/examples/: activity_jit.rs  activity_sparsity_probe.rs  ai_mac_bench.rs  aot_bank.rs  aot_check.rs  aot_compiletime_probe.rs  aot_fusion_probe.rs  aot_opcount.rs  aot_pgo.rs  aot_settle_obs.rs  aot_settle_probe.rs  aot_specialize_probe.rs  batch_jit.rs  bitparallel_bench.rs  bitparallel_probe.rs  bitslice_aot_bench.rs  bitslice_check.rs  bitslice_probe.rs  comb_fusion_check.rs  cone_activity_probe.rs  cone_skip_check.rs  cslow_probe.rs  divergent_batch.rs  dyn_specialize.rs  extsim_compare.rs  fault_sim.rs  fault_sim_picorv32.rs  function_check.rs  gpu_emit.rs  gpu_throughput.rs  hybrid_gpu_run.rs  hybrid_sim.rs  jit_activity_bench.rs  jit_bench.rs  linear_aot_bench.rs  linear_batch_sim.rs  linear_gpu_run.rs  linear_leap.rs  linearity_check.rs  mux_depth_probe.rs  (+41 more)
crates/rrtl-sim-ir/src/: activity.rs  aot.rs  bitparallel.rs  bitslice.rs  gpu_codegen.rs  hybrid.rs  instance_fold.rs  jit.rs  leap.rs  lib.rs  linear_aot.rs  linearize.rs  specialize.rs  symbolic.rs  tabulate.rs  value_range.rs
crates/rrtl-surrogate/: Cargo.toml
crates/rrtl-surrogate/src/: lib.rs
crates/rrtl-surrogate/tests/: onnx.rs
crates/rrtl-surrogate/tests/fixtures/: tiny_event_predictor.onnx  tiny_gemm.onnx
crates/rrtl-sv/: Cargo.toml
crates/rrtl-sv-frontend/: Cargo.toml
crates/rrtl-sv-frontend/examples/: sv_parse.rs  vortex_try.rs
crates/rrtl-sv-frontend/src/: ast.rs  lib.rs  lower.rs  main.rs  netlist.rs  parser.rs  preprocess.rs  tests.rs
crates/rrtl-sv-frontend/tests/fixtures/: comb_case_decoder.sv  comb_if_defaults.sv  ff_case_default_next.sv  ff_case_fsm.sv  ff_if_else_counter.sv  ff_output_case_reset.sv  ff_output_logic.sv  ff_output_reg_counter.sv  rv_handwritten_slice.sv
docs/: authoring.md  gpu.md  pyrtl.md  rrtl-optimizations.md  runtime.md  simulation.md  surrogate.md
examples/: active_low_reset.rs  async_reset.rs  bidirectional_pad.rs  bundle_controller.rs  bundle_macro.rs  controller_fsm.rs  counter.rs  extern_module_macro.rs  fifo_lite.rs  fsm.rs  instances_macro.rs  interface_bus.rs  interface_macro.rs  logic_macro.rs  memory_macro.rs  ready_valid.rs  ready_valid_fifo.rs  ready_valid_macro.rs  ready_valid_mem_fifo.rs  ready_valid_skid.rs  ready_valid_slice.rs  register_file.rs  signals_macro.rs  signed_alu.rs  state_macro.rs  vcd_trace.rs  vendor_primitive.rs
examples/surrogate/: cache_miss_emitter_config.json  cache_miss_instrumentation_trace.json  cache_miss_trace.json
python/rrtl_pyrtl/: __init__.py  __main__.py  bench.py  corpus.py  corpus_smoke.json  corpus_template.json  discover.py  examples.py  export.py  gate.py  prepare_corpus.py
python/rrtl_surrogate/: __init__.py  gnn_transformer.py  minimal_onnx.py  train_cache_miss.py  train_gemm.py
scripts/: generate_tiny_event_onnx.py  generate_tiny_gemm_onnx.py
src/: lib.rs
tests/: bundle_macro.rs  bundle_macro_compile_fail.rs  extern_module_macro.rs  extern_module_macro_compile_fail.rs  instances_macro.rs  instances_macro_compile_fail.rs  interface_macro.rs  interface_macro_compile_fail.rs  logic_macro.rs  logic_macro_compile_fail.rs  memory_macro.rs  memory_macro_compile_fail.rs  ready_valid_macro.rs  ready_valid_macro_compile_fail.rs  signals_macro.rs  signals_macro_compile_fail.rs  state_macro.rs  state_macro_compile_fail.rs  test_pyrtl_bench.py  test_pyrtl_corpus.py  test_pyrtl_discover.py  test_pyrtl_gate.py  test_pyrtl_lane_trace.py  test_pyrtl_prepare.py  test_surrogate_gnn_transformer.py  test_surrogate_model_fast_flow.py  test_surrogate_train_cache_miss.py  test_surrogate_train_gemm.py
tests/compile_fail/: bundle_macro_malformed_nested.rs  bundle_macro_malformed_nested.stderr  bundle_macro_unsupported_constructor.rs  bundle_macro_unsupported_constructor.stderr  extern_module_macro_empty.rs  extern_module_macro_empty.stderr  extern_module_macro_unsupported_direction.rs  extern_module_macro_unsupported_direction.stderr  instances_macro_unsupported_kind.rs  (+37 more)
(+9 files in other folders)
