[package]
name = "rrtl-pyrtl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rrtl-core = { path = "../rrtl-core" }
rrtl-gpu-sim = { path = "../rrtl-gpu-sim" }
rrtl-ir = { path = "../rrtl-ir" }
rrtl-runtime = { path = "../rrtl-runtime" }
rrtl-sim-ir = { path = "../rrtl-sim-ir" }
rrtl-sv = { path = "../rrtl-sv" }
rrtl-surrogate = { path = "../rrtl-surrogate" }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
onnx-ort = ["rrtl-surrogate/onnx-ort"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "pyrtl2rrtl"
path = "src/main.rs"
