[package]
name = "rrtl-sim-ir"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rrtl-core = { path = "../rrtl-core" }
rrtl-ir = { path = "../rrtl-ir" }
rayon = { workspace = true }
serde = { workspace = true }

[features]
default = []
jit = []
