[package]
name = "rrtl-sim-ir"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rrtl-core = { path = "../rrtl-core" }
rrtl-ir = { path = "../rrtl-ir" }
rayon = { workspace = true }
serde = { workspace = true }
cranelift-codegen = { version = "0.110", optional = true }
cranelift-frontend = { version = "0.110", optional = true }
cranelift-jit = { version = "0.110", optional = true }
cranelift-module = { version = "0.110", optional = true }
cranelift-native = { version = "0.110", optional = true }
libloading = { version = "0.8", optional = true }

[features]
default = []
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-native",
]
aot = ["dep:libloading"]

[[example]]
name = "jit_bench"

[[example]]
name = "jit_activity_bench"

[[example]]
name = "simd_jit_batch_bench"

[[example]]
name = "extsim_compare"

[[example]]
name = "sv_cpu_bench"

[[example]]
name = "bitslice_aot_bench"
required-features = ["aot"]

[[example]]
name = "linear_aot_bench"
required-features = ["aot"]

[[example]]
name = "hybrid_sim"
required-features = ["aot"]

[dev-dependencies]
rrtl-sv-frontend = { path = "../rrtl-sv-frontend" }
rrtl-riscv-asm = { path = "../rrtl-riscv-asm" }
