[package]
name = "rrtl-surrogate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
onnx-ort = ["dep:ort"]

[dependencies]
ort = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
